# youtube-summarizer

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: docker-image.yml
