[tool.poetry]
name = "youtube-summarizer"
version = "0.1.0"
description = ""
authors = ["nogara <nogara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.33.0"
openai = "^1.16.2"
langchain = "^0.1.15"
yt-dlp = "^2024.4.9"
youtube-transcript-api = "^0.6.2"


[tool.poetry.group.dev.dependencies]
watchdog = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
